--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
     <groupId>org.starshipos</groupId>
     <artifactId>starship-maven-plugin</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <name>Starship Maven Plugin</name>
@@ -34,13 +34,14 @@
         <maven.compiler.target>21</maven.compiler.target>
         <maven.compiler.release>21</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <javafx.version>16</javafx.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
-            <version>3.8.5</version>
+            <version>3.9.9</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
@@ -58,26 +59,25 @@
             <artifactId>mojo-executor</artifactId>
             <version>2.4.1</version>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>org.openjfx</groupId>-->
-        <!--            <artifactId>javafx-controls</artifactId>-->
-        <!--            <version>24.0.1</version>-->
-        <!--            &lt;!&ndash; Or any JavaFX version that matches your JDK &ndash;&gt;-->
-        <!--        </dependency>-->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>16</version>
+            <version>${javafx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>16</version>
+            <version>${javafx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-graphics</artifactId>
-            <version>16</version>
+            <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-maven-plugin</artifactId>
+            <version>0.0.8</version>
         </dependency>
     </dependencies>
 
@@ -99,7 +99,7 @@
                              Will execute javafx:run during the initialize phase
                             -->
                         </goals>
-                        <phase>compile</phase>
+                        <phase>install</phase>
                         <!-- Bind to 'initialize' phase -->
                     </execution>
                 </executions>
@@ -130,27 +130,26 @@
             </plugin>
 
             <!-- Maven Invoker Plugin for integration testing -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-invoker-plugin</artifactId>
-                <version>1.7</version>
-                <configuration>
-                    <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
-                    <pomIncludes>
-                        <pomInclude>*/pom.xml</pomInclude> <!-- Include test projects -->
-                    </pomIncludes>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>integration-tests</id>
-                        <phase>integration-test</phase>
-                        <goals>
-                            <goal>install</goal>
-                            <goal>integration-test</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+            <!--            <plugin>-->
+            <!--                <groupId>org.apache.maven.plugins</groupId>-->
+            <!--                <artifactId>maven-invoker-plugin</artifactId>-->
+            <!--                <configuration>-->
+            <!--                    <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>-->
+            <!--                    <pomIncludes>-->
+            <!--                        <pomInclude>*/pom.xml</pomInclude> &lt;!&ndash; Include test projects &ndash;&gt;-->
+            <!--                    </pomIncludes>-->
+            <!--                </configuration>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <id>integration-tests</id>-->
+            <!--                        <phase>integration-test</phase>-->
+            <!--                        <goals>-->
+            <!--                            <goal>install</goal>-->
+            <!--                            <goal>integration-test</goal>-->
+            <!--                        </goals>-->
+            <!--                    </execution>-->
+            <!--                </executions>-->
+            <!--            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
@@ -165,6 +164,7 @@
                 <directory>src/main/resources</directory>
                 <filtering>false</filtering>
                 <includes>
+                    <include>starship-dev.properties</include>
                     <include>background.png</include>
                     <include>fiasco.globalconfig.arm</include>
                     <include>fiasco.globalconfig.x86_64</include>
@@ -175,43 +175,43 @@
         </resources>
     </build>
 
-    <reporting>
-        <outputDirectory>${project.build.directory}/site</outputDirectory>
-        <plugins>
-            <!-- Checkstyle -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>3.5.0</version>
-            </plugin>
+    <!--    <reporting>-->
+    <!--        <outputDirectory>${project.build.directory}/site</outputDirectory>-->
+    <!--        <plugins>-->
+    <!--            &lt;!&ndash; Checkstyle &ndash;&gt;-->
+    <!--            <plugin>-->
+    <!--                <groupId>org.apache.maven.plugins</groupId>-->
+    <!--                <artifactId>maven-checkstyle-plugin</artifactId>-->
+    <!--                <version>3.5.0</version>-->
+    <!--            </plugin>-->
 
-            <!-- PMD -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-                <version>3.23.0</version>
-            </plugin>
+    <!--            &lt;!&ndash; PMD &ndash;&gt;-->
+    <!--            <plugin>-->
+    <!--                <groupId>org.apache.maven.plugins</groupId>-->
+    <!--                <artifactId>maven-pmd-plugin</artifactId>-->
+    <!--                <version>3.23.0</version>-->
+    <!--            </plugin>-->
 
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.11</version>
-            </plugin>
-            <!-- Javadoc -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.6.3</version>
-                <reportSets>
-                    <reportSet>
-                        <reports>
-                            <report>javadoc</report>
-                        </reports>
-                    </reportSet>
-                </reportSets>
-            </plugin>
-        </plugins>
-    </reporting>
+    <!--            <plugin>-->
+    <!--                <groupId>org.jacoco</groupId>-->
+    <!--                <artifactId>jacoco-maven-plugin</artifactId>-->
+    <!--                <version>0.8.11</version>-->
+    <!--            </plugin>-->
+    <!--            &lt;!&ndash; Javadoc &ndash;&gt;-->
+    <!--            <plugin>-->
+    <!--                <groupId>org.apache.maven.plugins</groupId>-->
+    <!--                <artifactId>maven-javadoc-plugin</artifactId>-->
+    <!--                <version>3.6.3</version>-->
+    <!--                <reportSets>-->
+    <!--                    <reportSet>-->
+    <!--                        <reports>-->
+    <!--                            <report>javadoc</report>-->
+    <!--                        </reports>-->
+    <!--                    </reportSet>-->
+    <!--                </reportSets>-->
+    <!--            </plugin>-->
+    <!--        </plugins>-->
+    <!--    </reporting>-->
 
 </project>
 
