--- a/maven-starship-plugin-plugin/pom.xml
+++ b/maven-starship-plugin-plugin/pom.xml
@@ -43,12 +43,11 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-core</artifactId>
             <version>3.9.1</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.maven</groupId>
-            <artifactId>maven-model</artifactId>
-            <version>3.9.9</version>
+            <groupId>org.apache.maven.plugin-tools</groupId>
+            <artifactId>maven-plugin-annotations</artifactId>
+            <version>3.13.1</version>
             <scope>provided</scope>
         </dependency>
         <!-- And so on for the others -->
