Add platform-specific configurations and update dependencies
Introduce platform configurations for x86_64 and ARM within the Starship plugin, including Fiasco global configurations and build settings. Updated dependencies in `pom.xml` to align with changes and removed unnecessary scopes for cleaner management.

Signed-off-by: rajames <robjames44035@gmail.com>

--- a/maven-starship-plugin-plugin/src/main/resources/starship-dev.properties
+++ b/maven-starship-plugin-plugin/src/main/resources/starship-dev.properties
@@ -15,9 +15,9 @@
 #  language governing permissions and limitations under the License.
 #
 #
-buildJDK=false
+buildJDK=true
 buildJDK.ARM=false
-buildJDK.x86_64=false
+buildJDK.x86_64=true
 buildL4=true
 buildL4.ARM=false
 buildL4.x86_64=true
