--- a/maven-starship-plugin-plugin/src/main/resources/starship-dev.properties
+++ b/maven-starship-plugin-plugin/src/main/resources/starship-dev.properties
@@ -15,9 +15,9 @@
 #  language governing permissions and limitations under the License.
 #
 #
-buildJDK=true
+buildJDK=false
 buildJDK.ARM=false
-buildJDK.x86_64=true
+buildJDK.x86_64=false
 buildL4=true
 buildL4.ARM=false
 buildL4.x86_64=true
