Update build settings and Maven dependencies
Disable JDK builds for x86_64 and modify `buildJDK` properties. Additionally, update Maven dependencies to newer versions and remove the `provided` scope where applicable.

Signed-off-by: rajames <robjames44035@gmail.com>

--- a/maven-starship-plugin-plugin/src/main/resources/starship-dev.properties
+++ b/maven-starship-plugin-plugin/src/main/resources/starship-dev.properties
@@ -26,6 +26,6 @@ installToolchainFlag=true
 buildFiasco=true
 buildFiasco.ARM=false
 buildFiasco.x86_64=true
-runQEMU=false
+runQEMU=true
 runQEMU.ARM=false
 runQEMU.x86_64=true
