Enable ARM builds in starship-dev.properties
Modified the starship-dev.properties file to enable builds for ARM architecture across multiple components (JDK, L4, Fiasco, QEMU). This ensures ARM compatibility for these tools while retaining support for x86_64 builds.

Signed-off-by: rajames <robjames44035@gmail.com>

--- a/maven-starship-plugin-plugin/src/main/resources/starship-dev.properties
+++ b/maven-starship-plugin-plugin/src/main/resources/starship-dev.properties
@@ -15,17 +15,17 @@
 #  language governing permissions and limitations under the License.
 #
 #
-buildJDK=true
-buildJDK.ARM=false
-buildJDK.x86_64=true
-buildL4=true
-buildL4.ARM=false
-buildL4.x86_64=true
 installCodebase=true
 installToolchainFlag=true
+buildJDK=true
+buildJDK.ARM=true
+buildJDK.x86_64=true
+buildL4=true
+buildL4.ARM=true
+buildL4.x86_64=true
 buildFiasco=true
-buildFiasco.ARM=false
+buildFiasco.ARM=true
 buildFiasco.x86_64=true
 runQEMU=true
-runQEMU.ARM=false
+runQEMU.ARM=true
 runQEMU.x86_64=true
