Remove unused abstract classes and build utilities.
This commit deletes several abstract classes, build utilities, and related Maven plugin code that are no longer required. Cleanup improves project maintainability by removing redundant and unused components.

--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.starshipos</groupId>
-    <artifactId>starship-root</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <parent>
+        <groupId>org.starshipos</groupId>
+        <artifactId>starship-parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
 
-    <name>StarshipOS Root</name>
+    <artifactId>maven-starship-plugin</artifactId>
+
+    <packaging>maven-plugin</packaging>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -36,7 +39,4 @@
         <javafx.version>21.0.1</javafx.version>
     </properties>
 
-    <modules>
-        <module>maven-starship-plugin-plugin</module>
-    </modules>
 </project>
